various additions to writeup

--- a/tex/ch1.tex
+++ b/tex/ch1.tex
@@ -23,13 +23,7 @@ purpose.' But I'm anticipating having a good lunch.
 \hspace{2cm}--- James Watson, \emph{in conversation with Richard Dawkins}
 \end{quote}
 
-
-\section{Background}\label{S.intro1}
-
-This chapter gives a brief outline of bioprocessing and explains the background
-to the research.
-
-\subsection{Bioprocessing}\label{SS.bioproc}
+\section{Bioprocessing}\label{SS.bioproc}
 
 Before the advent of biotechnology, most therapeutics (medicines) were what are
 now termed \emph{small molecule} drugs. The pharmaceutical industry was
@@ -70,7 +64,7 @@ overall pharmaceutical market.  \citet{Otto:2014} also note that large-scale
 biopharmaceutical manufacturing facilities typically cost in the region of
 ``\$200 million to \$500 million or more'' to build.
 
-\subsection{Bioprocess Engineering}\label{SS.bioproceng}
+\section{Bioprocess Engineering}\label{SS.bioproceng}
 
 \citet{Schaschke:2014} defines bioprocess engineering as ``A specialist branch
 of (chemical) engineering that involves the design and operation of processes
@@ -79,7 +73,7 @@ and biopolymers.''  The design of a large-scale biopharmaceutical facility
 typically takes about two years and requires a multidisciplinary team of
 engineers and scientists.
 
-\subsection{Upstream and Downstream}\label{SS.updown}
+\section{Upstream and Downstream}\label{SS.updown}
 
 A complete facility typically starts with frozen vials of cells (the 
 \emph{working cell bank}) and finishes with the final formulated product in
@@ -109,7 +103,7 @@ At the end of downstream processing, a batch should consist of formulated bulk
 product, ready to be filled into its final packaging for delivery. The final 
 fill/finish steps often occur in a separate, sterile facility.
 
-\subsection{Buffers and Media}\label{SS.buffmed}
+\section{Buffers and Media}\label{SS.buffmed}
 
 Both upstream and downstream sections require large volumes of aqueous solutions
 to be prepared and stored.  Solutions used upstream are typically referred to as
@@ -127,7 +121,7 @@ per litre volume in the production bioreactor.  Typical large-scale production
 bioreactor volumes for such processes are in the range 10,000--30,000 litres.
 Each batch may use in the region of 20--40 different buffers and media.
 
-\subsection{Buffers and Media Preparation}\label{SS.buffmedprep}
+\section{Buffers and Media Preparation}\label{SS.buffmedprep}
 
 One of the reasons for the catch-all definitions of \emph{buffers} and
 \emph{media} in the section above is to do with segregation.
@@ -144,7 +138,7 @@ In both media and buffer preparation, one vessel is used to prepare the solution
 and then it is typically sterile filtered into either a hold vessel or the
 destination vessel.
 
-\subsection{Design of Buffer Preparation Areas}\label{SS.buffprepdes}
+\section{Design of Buffer Preparation Areas}\label{SS.buffprepdes}
 
 For a given product, a production process is defined at laboratory scale.  The
 definition of key parameters at laboratory scale can allow process engineers to
@@ -199,7 +193,7 @@ available sizes and product ranges are increasing each year, so much so that
 the state of the art has often moved on between the finish of the detailed
 design of a facility and the start of the first saleable production batch.
 
-\subsection{Problem Definition}\label{SS.probdef}
+\section{Problem Definition}\label{SS.probdef}
 \begin{figure}
     \centering
     \includegraphics[angle=0,scale=1]{./figures/buffer_pfd.pdf}
@@ -235,7 +229,7 @@ The scheduling tools used for the process tend to be deterministic, rather than
 stochastic (although some sensitivity analysis is usually built in as an 
 add-on); this makes it difficult to have confidence that a working schedule can
 handle the real-world batch-to-batch variability inherent in a process that has
-living cells as its engine.
+living cells at its heart.S
 
 A more streamlined methodology for solving this optimisation problem is
 required and this dissertation is concerned with developing such a methodology
