--- a/tex/ch2.tex
+++ b/tex/ch2.tex
@@ -31,7 +31,7 @@ similar problems in related industries.  Finally, papers relating to more
 general methodologies for solving scheduling and optimisation problems are
 reviewed.
 
-\subsection{Bioprocess Facility Design}\label{SS.bioprocdes}
+\section{Bioprocess Facility Design}\label{SS.bioprocdes}
 
 Current bioprocess facility design leverages software packages for creating mass
 balances and for schedule simulation.  The mass balance tool
@@ -67,7 +67,7 @@ process equipment and mass balance and it does not touch on buffer preparation.
 No mentions could be found of methodologies for optimising buffer preparation in
 bioprocess facility design.
 
-\subsection{Facility Design Optimisation in the Process Industry}
+\section{Facility Design Optimisation in the Process Industry}
 \label{SS.fdopi}
 Casting the net wider to the pharmaceutical, chemical and other process
 industries yields several articles that deal with similar families of problems.
@@ -123,7 +123,7 @@ multi-objective batch plant design.
 In \citet{Cavin:2004, Cavin:2005}, tabu search is discussed as a methodology to
 optimise the design of multi-purpose batch plants.
 
-\subsection{Simulation and Optimisation}\label{SS.simopt}
+\section{Simulation and Optimisation}\label{SS.simopt}
 
 Casting the net wider still to look at techniques for solving generalised
 scheduling and optimisation problems yields far more material, but further 
