--- a/tex/ch4.tex
+++ b/tex/ch4.tex
@@ -29,7 +29,7 @@ assimilate our own knowledge and get it into our power.
 \section{Introduction}\label{S.intro4}
 
 % TODO:
-\textbf{TODO: Rewrite this section}
+\textbf{TODO: Rewrite this section?}
 
 At first glance, the pathway to solving the vessel selection problem was
 unclear.
