--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -95,8 +95,8 @@ subfigure}
 {\normalsize 
 \vfill
 \begin{center} 
-\textup{A thesis submitted to University College Dublin in part fulfilment 
-of the requirements of the degree of Master of Science in Business Analytics}
+\textup{A dissertation submitted to University College Dublin in part
+fulfilment of the requirements of the degree of M.Sc. in Business Analytics}
 \end{center}
 \vfill
 \begin{center} 
@@ -143,7 +143,7 @@ To \ldots
 
 %% List of Algorithms (if any): need to \usepackage{algorithm2e} for nice 
 %  algorithm layout and this command
-\listofalgorithms\addcontentsline{toc}{chapter}{List of algorithms}
+%\listofalgorithms\addcontentsline{toc}{chapter}{List of algorithms}
 
 
 %% Preface
