added executable file, work on ch4

--- a/tex/ch5.tex
+++ b/tex/ch5.tex
@@ -26,7 +26,7 @@ His errors are volitional and are the portals of discovery.
 \section{Introduction}\label{S.intro5}
 \begin{figure}
     \centering
-    \includegraphics[angle=0,scale=0.55]{../examples/large-scale/plot2.pdf}
+    \includegraphics[angle=0,scale=0.8]{../examples/plant1/plot2.pdf}
     \caption{Equipment time utilisation for large-scale example}
     \label{fig.etu}
 \end{figure}
@@ -108,7 +108,7 @@ An equipment time utilisation plot for the random example is shown in
 \hyperref[fig.etu1]{Figure \ref*{fig.etu1}}.
 \begin{figure}
     \centering
-    \includegraphics[angle=0,scale=0.55]{./figures/plot1.pdf}
+    \includegraphics[angle=0,scale=0.8]{./figures/plot1.pdf}
     \caption{Equipment time utilisation for random example}
     \label{fig.etu1}
 \end{figure}
@@ -220,7 +220,7 @@ $\Theta \left( \mathcal{N}^2 \right)$.
 \section{Solution Time}\label{S.soltime}
 Using the parameters dataset given in 
 \hyperref[tbl.parameters]{Table \ref*{tbl.parameters}} and the vessels dataset
-given in \hyperref[tbl.vessels]{Table \ref*{tbl.vessels}}, the time taken for
+given in \hyperref[tbl.vessel]{Table \ref*{tbl.vessel}}, the time taken for
 the CPLEX solver to reach a feasible solution was evaluated.
 For a set of problem sizes (i.e. values of $\mathcal{N}$), 100 random datasets
 were generated for each problem size and the solution durations were recorded.
