--- a/tex/ch4.tex
+++ b/tex/ch4.tex
@@ -1307,8 +1307,8 @@ but it is also included here to illustrate the effects of goal programming.
 
 \begin{figure}
     \centering
-    \includegraphics[angle=0,scale=0.55]{./figures/plot1.pdf}
-    \caption{Large-scale example -- primary objective}
+    \includegraphics[angle=0,scale=0.8]{./figures/plot1.pdf}
+    \caption{Random example -- primary objective}
     \label{fig.primary}
 \end{figure}
 Note that the solution requires four vessels, with sizes
@@ -1358,8 +1358,8 @@ added:
 \end{equation}
 \begin{figure}
     \centering
-    \includegraphics[angle=0,scale=0.55]{./figures/plot2.pdf}
-    \caption{Large-scale example -- secondary objective}
+    \includegraphics[angle=0,scale=0.8]{./figures/plot2.pdf}
+    \caption{Random example -- secondary objective}
     \label{fig.secondary}
 \end{figure}
 
@@ -1588,7 +1588,7 @@ python, allowing both generation and manipulation of the results.
 The git version control software package was used to manage the development,
 including the \LaTeX\ scripts that comprise this thesis document.
 The git repository is hosted on GitHub, at 
-\url{https://github.com/multipitch/dissertation}
+\url{}
 
 Input data files are either in \texttt{csv} format or \texttt{ini} format, as
 parsers for both of these formats are included in the standard python library.
@@ -1661,8 +1661,145 @@ libraries.
     \end{tabular}
 \end{table}
 
+The source code may be cheked out from github by running:
+
+\texttt{\$ git clone https://github.com/multipitch/dissertation}
+
+The repository contains three folders; \texttt{examples}, \texttt{src},
+\texttt{tex}.
+All code is contained in the \texttt{src} folder.  The \texttt{examples} folder
+contains some example input files and the \texttt{tex} folder contains the
+\LaTeX\ scripts and associated files that were used to generate this document.
+
+The \texttt{src} folder contains three files:
+\begin{itemize}
+    \item \texttt{model.py} contains the model
+    \item \texttt{plots.py} contains code for genrating various plots
+    \item \texttt{runmodel} is a short executable script that runs the model(s)
+        in \texttt{model.py}
+\end{itemize}
+
 \subsection{Model Code}\label{SS.modelcode}
 
+The \texttt{model.py} file contains the following classes; a brief overview of
+each class is given in the paragraphs hereafter.
+\begin{itemize}
+    \item \texttt{Parameters}
+    \item \texttt{Vessels}
+    \item \texttt{Buffers}
+    \item \texttt{Variable}
+    \item \texttt{Variables}
+    \item \texttt{Results}
+\end{itemize}
+
+%\paragraph{Parameters}
+The \texttt{Parameters} class is used to store parameters data (see 
+\hyperref[S.parameters]{Section \ref*{S.parameters}}). 
+It can read the data from a file, or be passed the data as a \texttt{dict}.
+
+%\paragraph{Vessels}
+The \texttt{Vessels} class is used to store vessel data (see 
+\hyperref[S.vesseldata]{Section \ref*{S.vesseldata}}).
+Similar to the \texttt{Parameters} class, it can read the data from a file, or
+be passed the data as a \texttt{dict}.
+
+%\paragraph{Buffers}
+The \texttt{Buffers} class is used to store buffer data (see 
+\hyperref[S.bufferdata]{Section \ref*{S.bufferdata}}). 
+Again, it can read the data from a file, or be passed the data as a
+\texttt{dict}. It is also used to store some results when a problem has been
+solved; it contains a class method, \texttt{get\_results} for this purpose.
+
+%\pararaph{Variable}
+The \texttt{Variable} class is used to define a variable, e.g. 
+$\boldsymbol{z}_{n}$ or $\boldsymbol{w}_{nkp}$. 
+From the point of view of the \texttt{pulp} module, a variable is a single
+scalar entity (a \texttt{pulp.LpVariable} object).
+An instance of the \texttt{Variable} class represents all the elements of a 
+multidimensional variable e.g. 
+$\boldsymbol{x}_{np} \enspace \forall n \in N, \enspace \forall p \in P$.
+The class is initialised with information on the multidimensional variable,
+such as dimensions, bounds and whether the variable is integer or real valued.
+When the model is solved, the \texttt{evaluate} class method is used to create
+a multidimensional array of the evaluated values of each scalar variable
+object.
+
+%\pararaph{Variables}
+The \texttt{Variables} class simply exists to contain a group of
+\texttt{Variable} class instances.
+
+%\pararaph{Results}
+The \texttt{Results} class is a container for holding the solution variables.
+It has an \texttt{add} method for populating itself with data.
+
+The \texttt{model.py} file contains the following functions:
+\begin{itemize}
+    \item \texttt{csv\_columns\_to\_dict\_of\_lists}
+    \item \texttt{variable\_iterator}
+    \item \texttt{variable\_iterator\_loc}
+    \item \texttt{\_variable\_iterator\_loc}
+    \item \texttt{unflatten\_variable}
+    \item \texttt{define\_problem}
+    \item \texttt{initial\_objective}
+    \item \texttt{secondary\_objective}
+    \item \texttt{generate\_random\_model}
+    \item \texttt{run\_primary}
+    \item \texttt{run\_secondary}
+    \item \texttt{standard\_run}
+    \item \texttt{run\_random\_models}
+    \item \texttt{many\_random}
+    \item \texttt{one\_random}    
+\end{itemize}
+
+The \texttt{csv\_columns\_to\_dict\_of\_lists} function reads from csv files
+where the header row contains keys and subsequent rows contain values.
+It converts this data to a \texttt{dict}, with the header row entries as keys
+and the columns of data below a header as a list of values for that key.
+This is used to read from the \texttt{buffers.csv} and \texttt{vessels.csv}
+files.
+
+The \texttt{variable\_iterator} and \texttt{variable\_iterator\_loc}
+functions are recursive functions that may be used to access the components of
+a multidimensional variable in order.
+The former just returns the component, whilst the latter also returns its
+index.
+Both functions are wrappers to the function \texttt{\_variable\_iterator\_loc},
+which actually performs the recursion.
+These are required to flatten a multidimensional variable into a list so that
+it is suitable for passing to \texttt{pulp}.
+
+The \texttt{unflatten\_variable} varaible function essentially performs the
+reverse of the above iterator functions; given a required set of dimensions
+and a list of objects, it unflattens the list into a multidimensional array of
+objects with the requisite dimensions.
+It calls \texttt{variable\_iterator\_loc} to do this, i.e.\ it also operates
+recursively.
+
+The \texttt{define\_problem} function implements all of the equations in
+\hyperref[SS.completesummary]{Section \ref*{SS.completesummary}}, except for
+the objective function. It starts by initialising a problem 
+instance (i.e.\ a \texttt{pulp.LpProblem} object), then defines all the
+variables used in the equations, then adds all the equations to the problem
+instance. The objective function is omitted because this allows the function to
+be used for both the primary and the secondary objective runs.
+
+The \texttt{initial\_objective} function sets the objective function as per
+\hyperref[eq.objfn]{equation \ref*{eq.objfn}}.  This is used, after
+\texttt{define\_problem} to fully define the complete problem summarised in 
+\hyperref[SS.completesummary]{Section \ref*{SS.completesummary}}.
+
+Similarly, the \texttt{secondary\_objective} function sets the objective
+function as per \hyperref[eq.objfn2]{equation \ref*{eq.objfn2}} and also
+implements the additional constraint required by the secondary problem
+(\hyperref[eq.constr10]{equation \ref*{eq.constr10}}).
+This function is used to define the secondary problem, as summarised in
+complete problem summarised in 
+\hyperref[SS.model2summary]{Section \ref*{SS.model2summary}}.
+
+
+
 \subsection{Plotting Code}\label{SS.plotcode}
+
+\subsection{Executable}\label{SS.plotcode}
 
 
